# SafeLens

./: .gitattributes  .gitignore  README.md
web/: .env.example  README.md  __init__.py  api.py  config.py  database.py  logging_config.py  pyproject.toml  requirements.txt  server.py
web/alembic/: env.py
web/alembic/versions/: 0ff050ad4d2e_add_new_tables_for_detailed_safety_.py  2630dbdc9f54_add_v2_columns_to_harmful_events.py  2a36560869f7_update_videos_table_to_include_analysis_.py  4a61097f2214_update_accounts_table_id_to_not_auto_.py  87a9a7d5971e_add_url_download_support_columns_to_.py  87c8f21debe5_add_cascade_delete_constraints.py  9c7bcb937425_add_v2_columns_to_harmful_events.py  c0d3cb0d6a6d_update_accounts_table_structure_for_.py  caae70d2f47d_update_accounts_table_id_to_include_.py  ebd4d4eb356e_add_analysis_runs_table_for_pr3_tracking.py
web/app/health/: providers.py
web/app/orchestration/: report_builder.py  segment_analyzer.py  segmentation.py  (+1 more)
web/background/: enqueue.py
web/frontend/: .env.example  README.md  eslint.config.mjs  next-auth.d.ts  package.json  pnpm-lock.yaml
web/lora_adapter/: adapter_config.json  adapter_model.safetensors
web/providers/: __init__.py  llm_http.py
web/routers/: health.py  videos.py
web/schemas/: responses.py
web/services/: analysis_pipeline.py  failures.py  persistence.py  reporting.py  segmentation_service.py  transcript.py  url_downloader.py
web/tools/: __init__.py  frame_extraction.py  image_classifier.py  label_format.py  llm.py  ocr.py  transcription.py
web/utils/: memory.py  timecode.py
(+71 files in other folders)
